fix: wrap dos parceiros

--- a/assets/css/page-home.css
+++ b/assets/css/page-home.css
@@ -590,4 +590,5 @@ p{
 
 .group-images-section5-div{
     display:flex;
+    flex-wrap: wrap;
 }
